--- a/BracketRacket/app/views/users/new.html.erb
+++ b/BracketRacket/app/views/users/new.html.erb
@@ -4,6 +4,9 @@
   <div>
     <%= form.label :username %><br>
     <%= form.text_field :username %>
+    <% @user.errors.full_messages_for(:username).each do |message| %>
+      <div><%= message %></div>
+    <% end %>
   </div>
 
   <div>
