link to account creation

--- a/BracketRacket/app/views/home/index.html.erb
+++ b/BracketRacket/app/views/home/index.html.erb
@@ -1,3 +1,3 @@
 <h1>Bracket Racket</h1>
-<p>Create A New Team</p>
+<%= link_to "Create A New League", {controller: 'users', action: 'new'}%>
 <p>Continue An Existing Season</p>
